--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1537,9 +1537,9 @@ border-radius: 1%;
 }
 
 /*--------------------------------------------------------------
-# Pricing Section
+# servicios Section
 --------------------------------------------------------------*/
-.pricing .pricing-item {
+.servicios .servicios-item {
   background-color: var(--surface-color);
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -1549,7 +1549,7 @@ border-radius: 1%;
   overflow: hidden;
 }
 
-.pricing .pricing-item h3 {
+.servicios .servicios-item h3 {
   font-weight: 400;
   margin: -20px -20px 20px -20px;
   padding: 20px 15px;
@@ -1559,25 +1559,25 @@ border-radius: 1%;
   background: color-mix(in srgb, var(--default-color), transparent 95%);
 }
 
-.pricing .pricing-item h4 {
+.servicios .servicios-item h4 {
   font-size: 36px;
   font-weight: 600;
   font-family: var(--heading-font);
 }
 
-.pricing .pricing-item h4 sup {
+.servicios .servicios-item h4 sup {
   font-size: 20px;
   top: -15px;
   left: -3px;
 }
 
-.pricing .pricing-item h4 span {
+.servicios .servicios-item h4 span {
   color: color-mix(in srgb, var(--default-color), transparent 40%);
   font-size: 16px;
   font-weight: 300;
 }
 
-.pricing .pricing-item ul {
+.servicios .servicios-item ul {
   padding: 15px 0;
   list-style: none;
   text-align: center;
@@ -1585,29 +1585,29 @@ border-radius: 1%;
   font-size: 14px;
 }
 
-.pricing .pricing-item ul li {
+.servicios .servicios-item ul li {
   padding-bottom: 16px;
 }
 
-.pricing .pricing-item ul i {
+.servicios .servicios-item ul i {
   color: var(--accent-color);
   font-size: 18px;
   padding-right: 4px;
 }
 
-.pricing .pricing-item ul .na {
+.servicios .servicios-item ul .na {
   color: color-mix(in srgb, var(--default-color), transparent 40%);
   text-decoration: line-through;
 }
 
-.pricing .btn-wrap {
+.servicios .btn-wrap {
   background: color-mix(in srgb, var(--default-color), transparent 95%);
   margin: 0 -20px -20px -20px;
   padding: 20px 15px;
   text-align: center;
 }
 
-.pricing .btn-buy {
+.servicios .btn-buy {
   background: var(--accent-color);
   color: var(--contrast-color);
   display: inline-block;
@@ -1621,16 +1621,16 @@ border-radius: 1%;
   transition: 0.3s;
 }
 
-.pricing .btn-buy:hover {
+.servicios .btn-buy:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
 }
 
-.pricing .featured h3 {
+.servicios .featured h3 {
   background: var(--accent-color);
   color: var(--contrast-color);
 }
 
-.pricing .advanced {
+.servicios .advanced {
   background: var(--accent-color);
   color: var(--contrast-color);
   width: 200px;
