--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1644,6 +1644,20 @@ border-radius: 1%;
 }
 
 /*--------------------------------------------------------------
+# Add Scroll to Services
+--------------------------------------------------------------*/
+
+.servicios-certificacion,
+.servicios-estados-financieros,
+.servicios-sociedades,
+.servicios-libros-contables,
+.servicios-revision,
+.servicios-analisis-de-resultados{
+scroll-margin-top: 80px;
+}
+
+
+/*--------------------------------------------------------------
 # Faq Section
 --------------------------------------------------------------*/
 .faq .faq-container .faq-item {
