--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1656,6 +1656,9 @@ border-radius: 1%;
 scroll-margin-top: 300px;
 }
 
+.servicios-certificacion{
+  scroll-margin-top: 100px;
+}
 
 /*--------------------------------------------------------------
 # Faq Section
